ram pressure sequencing

--- a/StellarFeedback_p3.ipynb
+++ b/StellarFeedback_p3.ipynb
@@ -5,9 +5,9 @@
    "id": "0d47b6cb",
    "metadata": {},
    "source": [
-    "# Gas Discharge & Stellar Feedback-driven Outflows (Part 2 / 2):\n",
-    "## Scaling, Fractional Heating, Accretion\n",
-    "`-- Leo Lonzarich, 31 October 2021 // [Updated 14-11-21] --`\n",
+    "# Gas Discharge & Stellar Feedback-driven Outflows (Part 3 / 3):\n",
+    "## Accretion Times & Distributions\n",
+    "`-- Leo Lonzarich, 17 November 2021 // [Updated 17-11-21] --`\n",
     "\n",
     "\n",
     "### Table of Contents\n",
@@ -66,11 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "80092e6c",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -94,29 +92,19 @@
    "id": "56e98626",
    "metadata": {},
    "source": [
-    "## The 'Discharged' Gas: Comparing Heated Vs. All <a class=\"anchor\" id=\"compare\"></a>\n",
+    "## The 'Discharged' Gas: Comparing Heated Vs. All <a class=\"anchor\" id=\"accreted\"></a>\n",
     "\n",
     "____\n",
     "____\n",
     "\n",
-    "Here we commit to a similar treatment performed in *Stellar_Feedback_p1* where 'all' and 'heated' discharged gas divisions were compared. However, where we diverge here is that we scale radial positions of gas particles by the radius of their respective satellite galaxy's radius. That is, for each particle, we will have\n",
-    "$$\n",
-    "r_{eff} = r/R_{disk}\n",
-    "$$\n",
-    "for each particle, where $r_{eff}$ is the effective radius, $r$ is the radial position, and $R_{disk}$ is the radius of the relevant satellite's disk. Similarly, for velocities we commit to two different scalings\n",
-    "$$\n",
-    "v_{eff} = v/v_{vir} \\text{  and  } v_{eff} = v/v_{esc} \n",
-    "$$\n",
-    "where $v$ is the radial velocity, $v_{vir}$ is the satellite's virial velocity, and $v_{esc}$ is the escape velocity for the particle.\n",
     "\n",
-    "### Radial Position Scaling <a class=\"anchor\" id=\"radialpositions\"></a>\n",
     "\n",
-    "We begin by applying the scaling above for radial positions.\n"
+    "### Picking out Ram Pressures for discharged particles <a class=\"anchor\" id=\"ram\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "db6b647c",
    "metadata": {
     "scrolled": true
@@ -135,6 +123,205 @@
     "#ejected, cooled, expelled, accreted = read_all_ejected_expelled()\n",
     "predischarged, discharged, accreted, preheated, heated = read_discharged()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0e7d677e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Returning (ejected, cooled, expelled, accreted) for h148-13...\n",
+      "2 Returning (ejected, cooled, expelled, accreted) for h148-28...\n",
+      "3 Returning (ejected, cooled, expelled, accreted) for h148-37...\n",
+      "4 Returning (ejected, cooled, expelled, accreted) for h148-45...\n",
+      "5 Returning (ejected, cooled, expelled, accreted) for h148-68...\n",
+      "6 Returning (ejected, cooled, expelled, accreted) for h148-80...\n",
+      "7 Returning (ejected, cooled, expelled, accreted) for h148-283...\n",
+      "8 Returning (ejected, cooled, expelled, accreted) for h148-278...\n",
+      "9 Returning (ejected, cooled, expelled, accreted) for h148-329...\n",
+      "10 Returning (ejected, cooled, expelled, accreted) for h229-20...\n",
+      "11 Returning (ejected, cooled, expelled, accreted) for h229-22...\n",
+      "12 Returning (ejected, cooled, expelled, accreted) for h229-23...\n",
+      "13 Returning (ejected, cooled, expelled, accreted) for h229-27...\n",
+      "14 Returning (ejected, cooled, expelled, accreted) for h229-55...\n",
+      "15 Returning (ejected, cooled, expelled, accreted) for h242-24...\n",
+      "16 Returning (ejected, cooled, expelled, accreted) for h242-41...\n",
+      "17 Returning (ejected, cooled, expelled, accreted) for h242-80...\n",
+      "18 Returning (ejected, cooled, expelled, accreted) for h329-33...\n",
+      "19 Returning (ejected, cooled, expelled, accreted) for h329-137...\n"
+     ]
+    }
+   ],
+   "source": [
+    "pram = read_all_ram_pressure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e8b77a13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['t', 'a', 'h1dist', 'dNN', 'M_star', 'M_gas', 'satRvir', 'hostRvir',\n",
+       "       'vel_CGM', 'rho_CGM', 'Pram', 'n_CGM', 'vel_CGM_adv', 'rho_CGM_adv',\n",
+       "       'std_vel_CGM', 'std_rho_CGM', 'Pram_adv', 'Prest', 'SigmaGas', 'dphidz',\n",
+       "       'SFR', 'sSFR', 'ratio', 'dt', 'tau', 'tquench', 'Mgas_div', 'time_x',\n",
+       "       'M_SNeaff', 'time_y', 'M_disk', 'Mdisk_div', 'time_x', 'M_ejected',\n",
+       "       'Mdot_ejected', 'Mdot_ejected_by_Mgas', 'Mdot_ejected_by_Mdisk',\n",
+       "       'time_y', 'M_cooled', 'Mdot_cooled', 'Mdot_cooled_by_Mgas',\n",
+       "       'Mdot_cooled_by_Mdisk', 'time_x', 'M_expelled', 'Mdot_expelled',\n",
+       "       'Mdot_expelled_by_Mgas', 'time_y', 'M_expelled_disk',\n",
+       "       'Mdot_expelled_disk', 'Mdot_expelled_disk_by_Mgas',\n",
+       "       'Mdot_expelled_disk_by_Mdisk', 'time_x', 'M_expelled_th30',\n",
+       "       'Mdot_expelled_th30', 'Mdot_expelled_th30_by_Mgas', 'time_y',\n",
+       "       'M_accreted', 'Mdot_accreted', 'Mdot_accreted_by_Mgas', 'time',\n",
+       "       'M_accreted_disk', 'Mdot_accreted_disk', 'Mdot_accreted_disk_by_Mgas',\n",
+       "       'Mdot_accreted_disk_by_Mdisk', 'Mdot_gas', 'Mdot_disk', 'key', 'f_gas'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pram.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0626d3ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'pid'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m~/anaconda3/envs/conda-env-py3/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3360\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3361\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3362\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/conda-env-py3/lib/python3.8/site-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/conda-env-py3/lib/python3.8/site-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/conda-env-py3/lib/python3.8/site-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine._get_loc_duplicates\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/conda-env-py3/lib/python3.8/site-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine._maybe_get_bool_indexer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/conda-env-py3/lib/python3.8/site-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine._unpack_bool_indexer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'pid'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_16107/2858449729.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Ids of preheated\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpram\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pid'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# Ids of discharged, SNe heated gas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdischarged\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pid'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/conda-env-py3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3453\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3454\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3455\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3456\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3457\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/conda-env-py3/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3361\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3362\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3363\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3364\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3365\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhasnans\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'pid'"
+     ]
+    }
+   ],
+   "source": [
+    "# pulling out a subset of 'discharged' containing those discharged particles with pids that match the pids of those\n",
+    "# in 'accreted'; calling it 'accdis'; the masking technique.\n",
+    "\n",
+    "# Ids of preheated\n",
+    "x = np.array(pram['pid'])\n",
+    "# Ids of discharged, SNe heated gas\n",
+    "y = np.array(discharged['pid'])\n",
+    "\n",
+    "index = np.argsort(x)\n",
+    "sorted_x = x[index] # Sorted list of ids pre discharged                        \n",
+    "sorted_index = np.searchsorted(sorted_x, y)\n",
+    "yindex = np.take(index, sorted_index, mode=\"clip\")\n",
+    "mask = x[yindex] != y\n",
+    "result = np.ma.array(yindex, mask=mask)\n",
+    "pram_all = discharged.iloc[result[~result.mask].data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45d748a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d87ede34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24c86745",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13158f30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd80189b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0dde469",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef973314",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d02823",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39310171",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf4e70f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -175,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c196e740",
    "metadata": {},
    "outputs": [],
