--- a/StellarFeedback_p1.ipynb
+++ b/StellarFeedback_p1.ipynb
@@ -5,9 +5,9 @@
    "id": "0d47b6cb",
    "metadata": {},
    "source": [
-    "# Gas Discharge & Stellar Feedback-driven Outflows (Part 1 /2):\n",
+    "# Gas Discharge & Stellar Feedback-driven Outflows (Part 1 /3):\n",
     "## General Observations\n",
-    "`-- Leo Lonzarich, 20 October 2021 // [Updated 15-11-21] --`\n",
+    "`-- Leo Lonzarich, 20 October 2021 // [Updated 21-11-21] --`\n",
     "\n",
     "\n",
     "### Table of Contents\n",
@@ -23,19 +23,26 @@
     "- Repeated pids that turn up in the data sets below (e.g. 'ejected,' 'expelled,' 'discharged') should mean that the same particle has been accreted and reejected more than once --- hence its reoccurance in the set.\n",
     "\n",
     "\n",
-    "- While each root data set is defined where used, definitions are included here for convenience:\n",
-    "    - *Ejected*: All gas partiles that have been removed from their respective satellite galaxy's disk and into the halo.\n",
-    "    - *Expelled*: All gas particles (either within the disk or halo of their respective satellite galaxy) that have been removed beyond the virial radius of their satellite; that is, all gas that has been completely removed from its respective satellite.\n",
-    "    - *Discharged*: All gas that has been removed from the disk of its respective satellite galaxy. This includes gas both moved to the halo and beyond the virial radius.\n",
-    "    - *predischarged*: This is essentially a data set containing the pre-properties of the discharged gas, that is, it contains all of those gas particles in the *discharged* set but with their properties before being discharged.\n",
-    "    - *dsrg_accreted*: **fill in**\n",
+    "- The datasets used in this notebook: (note that each logs the properties for their respective particles for the period proceeding the differentiating event)\n",
+    "\n",
+    "    - **Ejected/Expelled Datasets of pulled from Akins:**\n",
+    "        - *Ejected*: Gas particles that have been removed from their respective satellite galaxy's disk to the halo.\n",
+    "        - *Expelled*: Gas particles (within the disk or halo of their respective satellite galaxy) that have been removed beyond the virial radius of their satellite; that is, all gas particles removed to the field.\n",
+    "        \n",
+    "    - **Discharge Datasets From Lonzarich:**\n",
+    "        - *Discharged*: Gas particles that have been removed from the disk of their respective satellite galaxy. This includes both gas moved to halo, and that moved beyond the virial radius.\n",
+    "        - *Predischarged*: Contains the same particles in *Discharged*, but with properties of each particle logged prior to discharge.\n",
+    "        - *Accreted*: Gas particles in the halo or beyond the virial radius of their respective satellite as the result of a discharge event, but that were accreted back onto the satellite's disk.\n",
+    "        - *Heated*: Gas particles in *Discharged* that were also supernova-heated at time of discharge (i.e., their 'cooling' parameter was turned off).\n",
+    "        - *Preheated*: Contains the same particles in *Heated*, but with properties of each particle logged prior to discharge.\n",
+    "\n",
     "    \n",
     "    \n",
     "- Units for key values used in this notebook:\n",
     "    - *Time* is in Gigayears $(Gyrs)$.\n",
     "    - *Distances* in kiloparsecs $(kpc)$.\n",
-    "    - *Velocities* in kiloparsecs per year $(kpc \\ yr^{-1})$.\n",
-    "    - *Masses* in Solar masses $(Msol)$."
+    "    - *Velocities* in kilometers per second $(km \\ s^{-1})$.\n",
+    "    - *Masses* in solar masses $(Msol)$."
    ]
   },
   {
