--- a/StellarFeedback_p3.ipynb
+++ b/StellarFeedback_p3.ipynb
@@ -62,7 +62,8 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "from analysis import * "
+    "from analysis import * \n",
+    "from accretion import *"
    ]
   },
   {
@@ -123,16 +124,27 @@
    ],
    "source": [
     "#ejected, cooled, expelled, accreted = read_all_ejected_expelled()\n",
-    "predischarged, discharged, accreted, preheated, heated = read_discharged()"
+    "predischarged, discharged, accreted, preheated, heated = read_all_discharged()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "30de5039",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h148_13 h148_278 h148_28 h148_283 h148_329 h148_37 h148_45 h148_68 h148_80 h229_20 h229_22 h229_23 h229_27 h229_55 h242_24 h242_41 h242_80 h329_137 h329_33\n",
+      "> Returning (adv. accreted) for all available satellites <\n"
+     ]
+    }
+   ],
+   "source": [
+    "adv_accreted = read_accreted()"
+   ]
   },
   {
    "cell_type": "code",
