--- a/StellarFeedback_p3.ipynb
+++ b/StellarFeedback_p3.ipynb
@@ -16,7 +16,7 @@
     "    \n",
     "- [Accretion Times](#acctime)\n",
     "    - [General Accretion Times](#gen)\n",
-    "\n",
+    "    - [Supernova Heating](#sne)\n",
     "\n",
     "### General Comments on the Contents\n",
     "- Repeated pids that turn up in the data sets below (e.g. 'ejected,' 'expelled,' 'discharged') should mean that the same particle has been accreted and reejected more than once --- hence its reoccurance in the set.\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c1be52",
+   "id": "99236640",
    "metadata": {},
    "source": [
     "## Accretion Times  <a class=\"anchor\" id=\"acctime\"></a>\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d149bfae",
+   "id": "af418a50",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "edb94c50",
+   "id": "7db6c00e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3871a24d",
+   "id": "a52f9feb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,13 +222,14 @@
     "    haloid = int(key[5:])\n",
     "    accreted_old1 = pd.read_hdf(f'{rootPath}Stellar_Feedback_Code/SNeData/dsrg_accreted_particles.hdf5', key=key)\n",
     "    accreted_old1['key'] = key\n",
+    "    accreted_old1['heating'] = \n",
     "    accreted_old = pd.concat([accreted_old, accreted_old1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "be6a2e0a",
+   "id": "61416e50",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "41180e50",
+   "id": "d065dc5a",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "45863a7d",
+   "id": "ff9b8c3a",
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8104d9a7",
+   "id": "992c3357",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1089,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8862ead9",
+   "id": "2b17052e",
    "metadata": {},
    "source": [
     "Alright, so this distribution suggests a significant portion of gas that is accreted is done so rather quickly. Now, it would be nice if we could sniff out some correlations. Let us start by looking at the relationships (or lack thereof) between accretion times and \n",
@@ -1099,25 +1100,59 @@
     "\n",
     "3) Degree of Ram Pressure Stripping; \n",
     "\n",
+    "5) Exit/Entrance velocities at discharge; \n",
+    "\n",
     "4) Temperatures.\n",
     "\n",
-    "filter for parameters (compare between discharged and accreted -- what discharged are not reaccreted)"
+    "<!-- filter for parameters (compare between discharged and accreted -- what discharged are not reaccreted) -->"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e0f417b",
+   "cell_type": "markdown",
+   "id": "1b877d58",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## So "
+    "### General Distribution of Accretion Times <a class=\"anchor\" id=\"sne\"></a>\n",
+    "\n",
+    "We start off looking at the dynamic between accretion time and a gas particle's state of SNe heating (heated or not)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "859143f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['time', 'pid', 'rho', 'temp', 'mass', 'coolontime', 'r', 'r_per_Rvir',\n",
+       "       'x', 'y', 'z', 'satRvir', 'a', 'vx', 'vy', 'vz', 'v', 'r_rel_host',\n",
+       "       'r_rel_host_per_Rvir', 'x_rel_host', 'y_rel_host', 'z_rel_host',\n",
+       "       'hostRvir', 'vx_rel_host', 'vy_rel_host', 'vz_rel_host', 'v_rel_host',\n",
+       "       'sat_Xc', 'sat_Yc', 'sat_Zc', 'sat_vx', 'sat_vy', 'sat_vz', 'host_Xc',\n",
+       "       'host_Yc', 'host_Zc', 'host_vx', 'host_vy', 'host_vz', 'sat_Mstar',\n",
+       "       'sat_Mgas', 'host_Mstar', 'host_Mgas', 'sat_r_half', 'sat_r_gas',\n",
+       "       'host_r_half', 'host_r_gas', 'in_sat', 'in_host', 'in_other_sat',\n",
+       "       'in_IGM', 'dt', 'r_gal', 'host_r_gal', 'sat_disk', 'sat_halo',\n",
+       "       'host_disk', 'host_halo', 'other_sat', 'IGM', 't', 'sat_Mvir',\n",
+       "       'recycleTime', 'key', 'weight'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accreted.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d15b375",
+   "id": "fbedfcbb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1125,14 +1160,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a53e5e63",
+   "id": "57d5ee2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c9b6ffab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving h329_33 tracked_particles datasets to /home/lonzaric/astro_research/Stellar_Feedback_Code/SNeData/tracked_particles_v2.hdf5\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim = str(key[:4])\n",
+    "haloid = int(key[5:])\n",
+    "\n",
+    "data = read_tracked_particles(sim, haloid)\n",
+    "timesteps = read_timesteps(sim)\n",
+    "ts = timesteps[timesteps.z0haloid==haloid]\n",
+    "ts = ts.rename({'mass':'sat_Mvir'}, axis=1)\n",
+    "ts = ts[['t','sat_Mvir']]\n",
+    "ts['sat_Mvir'] = ts['sat_Mvir'].astype('float')\n",
+    "\n",
+    "\n",
+    "data = pd.merge_asof(data, ts.sort_values('t'), left_on='time', right_on='t', direction='nearest', tolerance=1)\n",
+    "\n",
+    "filepath = '/home/lonzaric/astro_research/Stellar_Feedback_Code/SNeData/tracked_particles_v2.hdf5'\n",
+    "print(f'Saving {key} tracked_particles datasets to {filepath}')\n",
+    "data.to_hdf(filepath, key=key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e12e3b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "229b068a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "075a3a67",
+   "id": "9a86d382",
    "metadata": {},
    "source": [
     "### Code Testing <a class=\"anchor\" id=\"proving\"></a>\n",
@@ -1143,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b925af",
+   "id": "5a59cb5b",
    "metadata": {},
    "outputs": [],
    "source": []
