--- a/Dictionary.ipynb
+++ b/Dictionary.ipynb
@@ -118,8 +118,19 @@
    "source": [
     "# find the magnitude of rows in a matrix.\n",
     "\n",
-    "\n",
     "np.apply_along_axis(np.linalg.norm, 1, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd0ebce0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# give boolean array describing what elements of an array are included in a selection of arrays.\n",
+    "\n",
+    "boolean = np.isin(data1.pid, data2.pid)"
    ]
   },
   {
